src/objects/SAP_Reference__c.object
<CustomObject>
    <description>This object is for maintaining the information about delivery terms, payment terms, Incoterms, and other tables of reference from Baan or SAP.</description>
    <fields>
        <fullName>Available_to_Sales_Area_Codes__c</fullName>
        <description>List of available sales area codes, separated by semicolons</description>
        <label>Available to Sales Area Codes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code_Type__c</fullName>
        <inlineHelpText>Enter the full name of the code type and then follow it with a - and a 2 letter code for the code type</inlineHelpText>
        <label>Code Type</label>
        <picklist>
            <picklistValues>
                <fullName>Customer Group - CG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Customer Language - CL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery Priority - DP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delivery_Terms_DT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Incoterm - IC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Series - OS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Order Type - OT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Payment_Terms_PT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price Group - PG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Region Code - RC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales District - SD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Office - SO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Shipping Condition - SC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Terms of Payment - TP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transportation Zone - TZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warehouse Codes - WC</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <label>Code</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Company__c</fullName>
        <description>Company #</description>
        <globalPicklist>Company_Number</globalPicklist>
        <label>Company #</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Country_Code__c</fullName>
        <label>Country Code</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>If it begins with B, it is from Baan. If it begins with S, it is from SAP. The second 2 characters describe what type of code it is.</inlineHelpText>
        <label>Key</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Missing_Value__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>If this is checked, the record was not previously created and it will need to be addressed in the system of record.</inlineHelpText>
        <label>Missing Value</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <label>System</label>
        <picklist>
            <picklistValues>
                <fullName>Baan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SAP</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <required>true</required>
        <type>Picklist</type>
    </fields>
    <label>SAP Reference</label>
    <listViews>
        <fullName>All</fullName>
        <columns>Code__c</columns>
        <columns>NAME</columns>
        <columns>Code_Type__c</columns>
        <columns>System__c</columns>
        <columns>Company__c</columns>
        <columns>Key__c</columns>
        <columns>Missing_Value__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Delivery_Terms</fullName>
        <columns>Code__c</columns>
        <columns>NAME</columns>
        <columns>Code_Type__c</columns>
        <columns>Key__c</columns>
        <columns>System__c</columns>
        <columns>Missing_Value__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Code_Type__c</field>
            <operation>equals</operation>
            <value>Delivery_Terms_DT</value>
        </filters>
        <label>Delivery Terms</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>EMEA_Customer_Group</fullName>
        <columns>Code__c</columns>
        <columns>NAME</columns>
        <columns>Code_Type__c</columns>
        <columns>Key__c</columns>
        <columns>System__c</columns>
        <columns>Missing_Value__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Code_Type__c</field>
            <operation>equals</operation>
            <value>Customer Group - CG</value>
        </filters>
        <label>EMEA Customer Group</label>
        <language>en_US</language>
        <sharedTo>
            <group>Admins</group>
            <group>EMEA_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_Customer_Language</fullName>
        <columns>Code__c</columns>
        <columns>NAME</columns>
        <columns>Code_Type__c</columns>
        <columns>Key__c</columns>
        <columns>System__c</columns>
        <columns>Missing_Value__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Code_Type__c</field>
            <operation>equals</operation>
            <value>Customer Language - CL</value>
        </filters>
        <label>EMEA Customer Language</label>
        <language>en_US</language>
        <sharedTo>
            <group>Admins</group>
            <group>EMEA_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_Delivery_Priority</fullName>
        <columns>Code__c</columns>
        <columns>NAME</columns>
        <columns>Code_Type__c</columns>
        <columns>Key__c</columns>
        <columns>System__c</columns>
        <columns>Missing_Value__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Code_Type__c</field>
            <operation>equals</operation>
            <value>Delivery Priority - DP</value>
        </filters>
        <label>EMEA  Delivery Priority</label>
        <language>en_US</language>
        <sharedTo>
            <group>Admins</group>
            <group>EMEA_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_Incoterm</fullName>
        <columns>Code__c</columns>
        <columns>NAME</columns>
        <columns>Code_Type__c</columns>
        <columns>Key__c</columns>
        <columns>System__c</columns>
        <columns>Missing_Value__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Code_Type__c</field>
            <operation>equals</operation>
            <value>Incoterm - IC</value>
        </filters>
        <label>EMEA Incoterm</label>
        <language>en_US</language>
        <sharedTo>
            <group>Admins</group>
            <group>EMEA_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_Price_Group</fullName>
        <columns>Code__c</columns>
        <columns>NAME</columns>
        <columns>Code_Type__c</columns>
        <columns>Key__c</columns>
        <columns>System__c</columns>
        <columns>Missing_Value__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Code_Type__c</field>
            <operation>equals</operation>
            <value>Price Group - PG</value>
        </filters>
        <label>EMEA Price Group</label>
        <language>en_US</language>
        <sharedTo>
            <group>Admins</group>
            <group>EMEA_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_Regions</fullName>
        <columns>Code__c</columns>
        <columns>NAME</columns>
        <columns>Code_Type__c</columns>
        <columns>Key__c</columns>
        <columns>System__c</columns>
        <columns>Missing_Value__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Code_Type__c</field>
            <operation>equals</operation>
            <value>Region Code - RC</value>
        </filters>
        <label>EMEA Regions</label>
    </listViews>
    <listViews>
        <fullName>EMEA_Sales_District</fullName>
        <columns>Code__c</columns>
        <columns>NAME</columns>
        <columns>Code_Type__c</columns>
        <columns>Key__c</columns>
        <columns>System__c</columns>
        <columns>Missing_Value__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Code_Type__c</field>
            <operation>equals</operation>
            <value>Sales District - SD</value>
        </filters>
        <label>EMEA Sales District</label>
        <language>en_US</language>
        <sharedTo>
            <group>Admins</group>
            <group>EMEA_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_Sales_Districts</fullName>
        <columns>Code__c</columns>
        <columns>NAME</columns>
        <columns>Code_Type__c</columns>
        <columns>Key__c</columns>
        <columns>System__c</columns>
        <columns>Missing_Value__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Code_Type__c</field>
            <operation>equals</operation>
            <value>Sales District - SD</value>
        </filters>
        <label>EMEA Sales Districts</label>
    </listViews>
    <listViews>
        <fullName>EMEA_Sales_Office</fullName>
        <columns>Code__c</columns>
        <columns>NAME</columns>
        <columns>Code_Type__c</columns>
        <columns>Key__c</columns>
        <columns>System__c</columns>
        <columns>Missing_Value__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Code_Type__c</field>
            <operation>equals</operation>
            <value>Sales Office - SO</value>
        </filters>
        <label>EMEA Sales Office</label>
        <language>en_US</language>
        <sharedTo>
            <group>Admins</group>
            <group>EMEA_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_Shipping_Condition</fullName>
        <columns>Code__c</columns>
        <columns>NAME</columns>
        <columns>Code_Type__c</columns>
        <columns>Key__c</columns>
        <columns>System__c</columns>
        <columns>Missing_Value__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Code_Type__c</field>
            <operation>equals</operation>
            <value>Shipping Condition - SC</value>
        </filters>
        <label>EMEA Shipping Condition</label>
        <language>en_US</language>
        <sharedTo>
            <group>Admins</group>
            <group>EMEA_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_Terms_of_Payment</fullName>
        <columns>Code__c</columns>
        <columns>NAME</columns>
        <columns>Code_Type__c</columns>
        <columns>Key__c</columns>
        <columns>System__c</columns>
        <columns>Missing_Value__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Code_Type__c</field>
            <operation>equals</operation>
            <value>Terms of Payment - TP</value>
        </filters>
        <label>EMEA Terms of Payment</label>
        <language>en_US</language>
        <sharedTo>
            <group>Admins</group>
            <group>EMEA_All_Users</group>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_Transportation_Zones</fullName>
        <columns>Code__c</columns>
        <columns>NAME</columns>
        <columns>Code_Type__c</columns>
        <columns>Key__c</columns>
        <columns>System__c</columns>
        <columns>Missing_Value__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Code_Type__c</field>
            <operation>equals</operation>
            <value>Transportation Zone - TZ</value>
        </filters>
        <label>EMEA Transportation Zones</label>
    </listViews>
    <listViews>
        <fullName>Missing</fullName>
        <columns>Code__c</columns>
        <columns>NAME</columns>
        <columns>Code_Type__c</columns>
        <columns>System__c</columns>
        <columns>Company__c</columns>
        <columns>Key__c</columns>
        <columns>Missing_Value__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Missing_Value__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Missing</label>
    </listViews>
    <nameField>
        <label>Description</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SAP References</pluralLabel>
    <recordTypes>
        <fullName>Enersys_SAP_Reference</fullName>
        <active>true</active>
        <description>Record type for Delivery Terms, Payment Terms</description>
        <label>Enersys SAP Reference</label>
    </recordTypes>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>Validate_the_Key</fullName>
        <active>true</active>
        <errorConditionFormula>IF(
 ISPICKVAL(System__c, &apos;Baan&apos;), 
 &quot;B&quot; &amp; RIGHT(TEXT(Code_Type__c), 2) &amp;&quot;-&quot; &amp;Code__c,
 IF(
  ISPICKVAL(System__c, &apos;SAP&apos;),
  &quot;S&quot; &amp; RIGHT(TEXT(Code_Type__c), 2) &amp;&quot;-&quot; &amp;Code__c,
  NULL)
)&amp;
IF(
 ISBLANK(TEXT(Company__c)),
 &quot;&quot;,
 &quot;-&quot;&amp;TEXT(Company__c)
)
!=Key__c</errorConditionFormula>
        <errorMessage>Please check the Key. The key entered is not formatted correctly</errorMessage>
    </validationRules>
</CustomObject>